fix(prettier): prettier issues (MINOR)

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "jest-mock-fetch": "^2.0.5",
     "jest-to-match-shape-of": "^1.3.2",
     "jsdom-testing-mocks": "^1.16.0",
+    "prettier": "^3.8.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
