--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.6",
-    "@faker-js/faker": "^10.2.0",
+    "@babel/preset-env": "^7.28.6",
+    "@babel/preset-typescript": "^7.28.5",
+    "@faker-js/faker": "^9.9.0",
     "@next/bundle-analyzer": "^16.1.2",
     "@next/env": "^16.1.2",
     "@swc/cli": "^0.7.10",
@@ -71,6 +73,7 @@
     "jsdom-testing-mocks": "^1.16.0",
     "prettier": "^3.8.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "engines": {
