--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
+      "#/app/*": [
+        "src/app/*"
+      ],
       "#/public/*": [
         "src/public/*"
       ],
