feat(test): adjustments on collectCoverageFrom (MINOR)

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:ci": "jest --runInBand --coverage --silent",
     "test:update-snapshots": "jest --updateSnapshot",
     "test:coverage": "pnpm test --coverage --detectOpenHandles",
+    "open:coverage": "open-cli coverage/index.html",
     "tsc": "pnpm tsc:check",
     "tsc:check": "tsc --noEmit --incremental",
     "tsc:emit": "tsc --declaration --emitDeclarationOnly --outDir",
@@ -73,6 +74,7 @@
     "jest-mock-fetch": "^2.0.5",
     "jest-to-match-shape-of": "^1.3.2",
     "jsdom-testing-mocks": "^1.16.0",
+    "open-cli": "^8.0.0",
     "prettier": "^3.8.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
